# ifa_backtesting_product

./: .env.example  .env.production.example  .gitignore  DEPLOY.md  DEPLOY_RENDER_VERCEL.md  README.md  TEST_REPORT.md  deploy.sh  docker-compose.prod.yml  render.yaml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7fc4d1e68eea_add_clients_vam_enabled_feature_flag.py  8db2c80aaa9d_initial_users_clients_terms_versions_.py  98a5c8489cca_day2_strategies_requests_backtests_.py  d42caf556b3d_add_engine_column_to_backtests.py
backend/app/: main.py  seed.py
backend/app/api/v1/: __init__.py  auth.py  backtests.py  me.py  requests.py  strategies.py  terms.py  vam.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  audit.py  backtest.py  client.py  notification.py  request.py  strategy.py  terms.py  user.py
backend/app/services/: audit.py  storage.py  vam.py  vam_run.py
backend/scripts/: provision_ravi.py
backend/tests/: e2e_selenium.py
backend/tests/exhaustive/: api_exhaustive.py  cross_tenant.py  e2e_browser_uploads.py  edge_cases.py  firebase_integration.py  generate_strategies.py  math_validator.py  mutation_test.py
backend/tests/exhaustive/reports/: firebase_response_schemas.json
backend/tests/exhaustive/strategies/: BT-SYN-0001.json  BT-SYN-0002.json  BT-SYN-0003.json  BT-SYN-0004.json  BT-SYN-0005.json  BT-SYN-0006.json  BT-SYN-0007.json  BT-SYN-0008.json  BT-SYN-0009.json  BT-SYN-0010.json  BT-SYN-0011.json  BT-SYN-0012.json  (+263 more)
(+55 files in other folders)
