[project]
name = "ifa-backtest-product"
version = "0.1.0"
description = "IFA Backtest Engine — backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg2-binary>=2.9",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "python-dotenv>=1.0",
  "firebase-admin>=6.5",
  "supabase>=2.7",
  "loguru>=0.7",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "jsonschema>=4.23",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.11",
  "black>=24.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
